--- a/DanicngBeans/DanicngBeans/Base.lproj/Main.storyboard
+++ b/DanicngBeans/DanicngBeans/Base.lproj/Main.storyboard
@@ -310,7 +310,7 @@
         <!--Menu List View Controller-->
         <scene sceneID="8HT-Tm-rC3">
             <objects>
-                <viewController storyboardIdentifier="newMenuListVC" id="ClC-Vl-lao" customClass="menuListViewController" customModule="DanicngBeans" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MenuListVC" id="ClC-Vl-lao" customClass="menuListViewController" customModule="DanicngBeans" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dc8-TQ-MKW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
